--- a/.github/workflows/nodejs-environments.yml
+++ b/.github/workflows/nodejs-environments.yml
@@ -4,21 +4,29 @@ on:
   push:
     branches:
       - main
+      - dev
+      - staging
 
 jobs:
   dev:
     runs-on: ubuntu-latest
     environment: dev
+    if: github.ref == 'refs/heads/dev'
     steps:
       - uses: actions/checkout@v3
+
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
           node-version: '18'
+      
       - name: Install dependencies
-        run: npm install
-      - name: Run calculator in dev
-        run: node calculator.js add 1 2
+        run: npm ci
+      
+      - name: Run testing of calculator
+        run: npm run test
+
+      
 
   staging:
     runs-on: ubuntu-latest
