--- a/package.json
+++ b/package.json
@@ -2,13 +2,17 @@
   "name": "cli-calculator",
   "version": "1.0.0",
   "description": "A basic command-line calculator in Node.js",
-  "main": "calculator.js",
+  "main": "cli.js",
   "bin": {
-    "calculator": "./calculator.js"
+    "calculator": "./cli.js"
   },
   "scripts": {
-    "start": "node calculator.js"
+    "start": "node cli.js",
+    "test": "jest"
   },
   "author": "",
-  "license": "MIT"
-} 
+  "license": "MIT",
+  "devDependencies": {
+    "jest": "^29.7.0"
+  }
+}
