--- a/.github/workflows/nodejs-environments.yml
+++ b/.github/workflows/nodejs-environments.yml
@@ -11,7 +11,7 @@ jobs:
   dev:
     runs-on: ubuntu-latest
     environment: dev
-    if: github.ref == 'refs/heads/dev'
+    # if: github.ref == 'refs/heads/dev'
     steps:
       - uses: actions/checkout@v3
 
