--- a/.github/workflows/nodejs-environments.yml
+++ b/.github/workflows/nodejs-environments.yml
@@ -11,7 +11,7 @@ jobs:
   dev:
     runs-on: ubuntu-latest
     environment: dev
-    # if: github.ref == 'refs/heads/dev'
+    if: github.ref == 'refs/heads/dev'
     steps:
       - uses: actions/checkout@v3
 
@@ -32,6 +32,7 @@ jobs:
     runs-on: ubuntu-latest
     environment: staging
     needs: dev
+    if: github.ref == 'refs/heads/staging'
     steps:
       - uses: actions/checkout@v3
       - name: Set up Node.js
