--- a/.github/workflows/nodejs-environments.yml
+++ b/.github/workflows/nodejs-environments.yml
@@ -29,7 +29,7 @@ jobs:
       - name : Deploying to vm
         run: |
           echo "Deploying to VM..."
-          sshpass -p "${{ secrets.SSH_PASSWORD }}" ssh -o StrictHostKeyChecking=no azureuser@20.244.43.49 "cd /home/azureuser/calculator && git pull && npm install && pm2 restart calculator"
+          sshpass -p "${{ secrets.SSH_PASSWORD }}" ssh -o StrictHostKeyChecking=no azureuser@20.244.43.49 "mkdir -p /home/azureuser/calculator && cd /home/azureuser/calculator && git pull && npm install && pm2 restart calculator"
 
 
       
